--- a/EssentialsSamples.iOS/EssentialsSamples.iOS.csproj
+++ b/EssentialsSamples.iOS/EssentialsSamples.iOS.csproj
@@ -156,4 +156,8 @@
       <Name>EssentialsSamples</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\arrow.png" />
+    <BundleResource Include="Resources\compass.png" />
+  </ItemGroup>
 </Project>
